hphp/test/vm/typedef_duplicate2.php.expectf
HipHop Fatal error: The type Coord is already defined to an incompatible type in %s on line 5
